# SimpleChatX

./: .gitignore  CMakeLists.txt  DEVLOG.md  Design.md  Devlog.md  Makefile  README.md
docs/: DEVLOG.md  developer_log.md  study_notes.md
includes/: ClientSession.hpp  Config.hpp  Database.hpp  Message.hpp  Server.hpp  ThreadPool.hpp  UserManager.hpp  Utils.hpp
scripts/: start_client.sh  start_server.sh
srcs/: ClientSession.cpp  Database.cpp  Server.cpp  ThreadPool.cpp  UserManager.cpp  Utils.cpp  main.cpp
